fixing the navbar when collapsed

--- a/assets/themes/bootstrap/css/blog.css
+++ b/assets/themes/bootstrap/css/blog.css
@@ -82,6 +82,22 @@
   }
 }
 
+/* Adds the carrot under the active page
+.navbar-default .navbar-nav > .active > a:after {
+  position: absolute;
+  bottom: 0;
+  left: 0%;
+  width: 0;
+  height: 0;
+  margin-left: 15px;
+  vertical-align: middle;
+  content: " ";
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid;
+  border-left: 5px solid transparent;
+}
+*/
+
 body {
   margin-top: 20px;
   padding-top: 20px;
